--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.2.10
+beautifulsoup4==4.9.1
+bootstrap4==0.1.0
 Django==3.0.8
+django-bootstrap4==2.2.0
 django-taggit==1.2.0
 pytz==2020.1
+soupsieve==2.0.1
 sqlparse==0.3.1
