--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ dj-database-url==0.5.0
 Django==3.0.8
 django-bootstrap4==2.2.0
 django-ckeditor==5.9.0
+django-classy-tags==2.0.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
 django-taggit==1.2.0
+django-taggit-templatetags2==1.6.1
 gunicorn==20.0.4
 psycopg2==2.8.5
 pytz==2020.1
